--- a/cad_roupas/templates/site/home.html
+++ b/cad_roupas/templates/site/home.html
@@ -54,12 +54,12 @@
                 </div>
             </div>
             <div class="card" style="width: 16rem;">
-                <img src="{% static 'img/cat-img.png' %}" class="card-img-top" alt="...">
+                <img src="{% static 'img/festa.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Vestido Festas</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="categoria/3" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
             <div class="card" style="width: 16rem;">
