--- a/cad_roupas/templates/site/produto.html
+++ b/cad_roupas/templates/site/produto.html
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div class="col-lg-12">
-                            <h1 class="m-0 p-0 price-pro">{{preco}}</h1><sup>não somado 50 reais de lavagem</sup>
+                            <h1 class="m-0 p-0 price-pro">{{preco}}</h1><sup>não somado {{roupa.precoLavagem}} reais de lavagem</sup>
                         </div>
                         <div class="col-lg-12 mt-3">
                             <div class="row">
