--- a/cad_roupas/templates/site/produto.html
+++ b/cad_roupas/templates/site/produto.html
@@ -6,25 +6,18 @@
     <div class="col-lg-12 border p-3 main-section bg-white  border-0">
         <div class="row m-0">
             <div class="col-lg-5 left-side-product-box pb-3  border-0">
-                <img src="{% static 'img/cat-img.png' %}" class="border p-3  border-0">
-                <!-- <span class="sub-img">
-                    <img src="{% static 'img/cat-img.png' %}" class="border p-2">
-                    <img src="{% static 'img/cat-img.png' %}" class="border p-2">
-                    <img src="{% static 'img/cat-img.png' %}" class="border p-2">
-                </span> -->
+                <img src="/media/{{ roupa.imagem }}" class="border p-3  border-0">
             </div>
             <div class="col-lg-7 d-flex align-items-center">
                 <div class="right-side-pro-detail border p-3 m-0 border-0">
                     <div class="row">
                         <div class="col-lg-12">
                             <!-- <span>Who What Wear</span> -->
-                            <p class="m-0 p-0 title-h1">Women's Velvet Dress</p>
+                            <p class="m-0 p-0 title-h1">{{roupa.nome}}</p>
                         </div>
                         <div class="col-lg-12 pt-2">
                             <!-- <h5>Product Detail</h5> -->
-                            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris.</span>
+                            <span>{{roupa.descricao}}</span>
                         </div>
                         <div class="selects py-3 gap-3 d-flex flex-column">
                             <div class="col-sm-12 col-lg-4">
@@ -48,7 +41,7 @@
                             </div>
                         </div>
                         <div class="col-lg-12">
-                            <h1 class="m-0 p-0 price-pro">R$ 30 </h1><sup>não somado 50 reais de lavagem</sup>
+                            <h1 class="m-0 p-0 price-pro">{{preco}}</h1><sup>não somado {{roupa.precoLavagem}} reais de lavagem</sup>
                         </div>
                         <div class="col-lg-12 mt-3">
                             <div class="row">
@@ -75,51 +68,16 @@
     </div>
     <div class="container-fluid py-2 scroll">
         <div class="row  flex-row flex-nowrap gap-5">
+            {% for relacionado in relacionados %}
             <div class="card card-block" style="width: 16rem;">
-                <img src="{% static 'img/cat-img.png' %}" class="card-img-top" alt="...">
+                <img src="/media/{{relacionado.imagem}}" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">{{ relacionado.nome }}</h5>
+                    <p class="card-text">{{ relacionado.descricao }}</p>
+                    <a href="produto/{{relacionado.id}}" class="btn btn-primary">Ver mais {{ relacionado.id }}</a>
                 </div>
             </div>
-            <div class="card" style="width: 16rem;">
-                <img src="{% static 'img/cat-img.png' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 16rem;">
-                <img src="{% static 'img/cat-img.png' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 16rem;">
-                <img src="{% static 'img/cat-img.png' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 16rem;">
-                <img src="{% static 'img/cat-img.png' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </section>
