--- a/cad_roupas/templates/site/home.html
+++ b/cad_roupas/templates/site/home.html
@@ -38,16 +38,20 @@
     </div>
     <div class="container-fluid py-2 scroll">
         <div class="row  flex-row flex-nowrap gap-5">
+            {% if categorias %}
             {% for categoria in categorias%}
-            <div class="card card-block" style="width: 16rem;" id="{{categoria.id}}">
-                <img src="/media/{{categoria.imagem}}" class="card-img-top" alt="...">
+            <div class="card card-block" style="width: 20rem;" id="{{categoria.id}}">
+                <img src="/media/{{categoria.imagem}}" class="card-img-top" style="max-width: 100%; max-height: 55%; object-fit: cover" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">{{ categoria.nome }}</h5>
                     <p class="card-text">{{ categoria.descricao }}</p>
-                    <a href="categoria/{{categoria.id}}" class="btn btn-primary">Ver mais</a>
+                </div>
+                <div class="card-footer">
+                     <a href="categoria/{{categoria.id}}" class="btn btn btn btn-danger w-100">Ver mais</a>
                 </div>
             </div>
             {% endfor %}
+            {% endif %}
         </div>
     </div>
 </section>
@@ -59,66 +63,64 @@
             <p class="section-pc">Este é um trabalho da discplina de desenvolvimento em python na Estácio</p>
         </div>
     </div>
-
-    <div class="container-fluid py-2 scroll">
+    <div class="container-fluid py-2 scroll" id="sobrenos">
         <div class="row  flex-row flex-nowrap gap-5">
-            <div class="card mb-3" style="max-width: 540px;">
+            <div class="card mb-3 card-block" style="max-width: 540px; height: fit-content;">
                 <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="{% static 'img/cat-img.png' %}" class="img-fluid rounded-start" alt="...">
+                    <div class="col-md-5">
+                        <img src="{% static 'grupinho/isac.jpg' %}" class="img-fluid rounded-start" alt="...">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title">Isaac Sousa</h5>
+                            <p class="card-text">Programador fullstack no projeto. Stack principal backend, responsável pelo back e base de projeto.</p>
+                            <p class="card-text"><small class="text-body-secondary">Fullstack developer.</small></p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card mb-3" style="max-width: 540px;">
+            <div class="card mb-3 card-block" style="max-width: 540px; height: fit-content;">
                 <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="{% static 'img/cat-img.png' %}" class="img-fluid rounded-start" alt="...">
+                    <div class="col-md-5">
+                        <img src="{% static 'grupinho/lili.jpg' %}" class="img-fluid rounded-start" alt="...">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title">Maria liliane</h5>
+                            <p class="card-text">Administradora do grupo, administradora de banco de dados e scrum master.</p>
+                            <p class="card-text"><small class="text-body-secondary">Scrum master, líder.</small></p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card mb-3" style="max-width: 540px;">
+            <div class="card mb-3 card-block" style="max-width: 540px; height: fit-content;">
                 <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="{% static 'img/cat-img.png' %}" class="img-fluid rounded-start" alt="...">
+                    <div class="col-md-5">
+                        <img src="{% static 'grupinho/mig.jpg' %}" class="img-fluid rounded-start" alt="...">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title">Pedro Miguel</h5>
+                            <p class="card-text">Programador fullstack no projeto. Stack principal front-end, responsável pelo design e princípios.</p>
+                            <p class="card-text"><small class="text-body-secondary">Fullstack developer. Designer UI/UX.</small></p>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- <div class="card card-block" style="width: 16rem;">
-                <img src="{% static 'img/cat-img.png' %}" class="card-img-top" alt="...">
+            <div class="card mb-3 card-block" style="max-width: 540px; height: fit-content;">
+                <div class="row g-0">
+                    <div class="col-md-5">
+                        <img src="{% static 'grupinho/geiza.jpg' %}" class="img-fluid rounded-start" alt="..." style="max-width: 100%; height: 100%; object-fit: cover">
+                    </div>
+                    <div class="col-md-7">
+                        <div class="card-body">
+                            <h5 class="card-title">Geiza Franklin</h5>
+                            <p class="card-text">Tester QA do grupo, administradora de banco de dados.</p>
+                            <p class="card-text"><small class="text-body-secondary">QA, tester, banco de dados</small></p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="card card-block" style="width: 16rem;">
-                <img src="{% static 'img/cat-img.png' %}" class="card-img-top" alt="...">
-            </div>
-            <div class="card card-block" style="width: 16rem;">
-                <img src="{% static 'img/cat-img.png' %}" class="card-img-top" alt="...">
-            </div>
-            <div class="card card-block" style="width: 16rem;">
-                <img src="{% static 'img/cat-img.png' %}" class="card-img-top" alt="...">
-            </div> -->
         </div>
     </div>
 </section>
