--- a/cad_roupas/templates/registration/login.html
+++ b/cad_roupas/templates/registration/login.html
@@ -3,21 +3,20 @@
 {% block content %}
 
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+<p class="w-100 text-center pt-5 mb-0 text-uppercase fw-bold fs-5 text-danger">Nome de usuário senha não coincidem. Por favor, ente novamente.</p>
 {% endif %}
 
 {% if next %}
 {% if user.is_authenticated %}
-<p>Your account doesn't have access to this page. To proceed,
-  please login with an account that has access.</p>
+<p class="w-100 text-center pt-5 mb-0 text-uppercase fw-bold fs-5 text-danger">Suas credenciais não permitem acesso a essa página./p>
 {% else %}
-<p>Please login to see this page.</p>
+<p class="w-100 text-center pt-5 mb-0 text-uppercase fw-bold fs-5 text-danger">Faça login para ver essa página</p>
 {% endif %}
 {% endif %}
 
 <section class>
   <div class="container py-5 h-70">
-    <div class="row d-flex justify-content-center align-items-center h-100">
+    <div class="row d-flex justify-content-center align-items-center">
       <div class="col-xl-10">
         <div class="card rounded-3 text-black">
           <div class="row g-0">
