--- a/cad_roupas/templates/site/base.html
+++ b/cad_roupas/templates/site/base.html
@@ -1,7 +1,5 @@
 {% load static %}
-<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
-<body>
+<body class="h-100">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <div class="">
@@ -32,24 +30,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Catálogo
-                        </a>
-                        <ul class="dropdown-menu">
-                            {% block dropdown_menu %}{% endblock %}
 
-                            <!--<li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-                        </ul>
-                    </li>
                 </ul>
                 <div class="v-grid gap-2">
                     {% if user.is_authenticated %}
+                    <a class="btn " role="button" aria-disabled="true" href="">
                     {{ user.get_username }}
+                    </a>
                     <a class="btn btn-primary " role="button" aria-disabled="true"
                         href="{% url 'logout' %}?next={{ request.path }}">Logout</a>
                     <a class="btn btn-secondary cart " role="button" aria-disabled="true" href="/carrinho"><i
@@ -58,7 +45,7 @@
                     <a class="btn btn-secondary cart " role="button" aria-disabled="true" href="/carrinho/"><i
                             class="bi bi-bag" style="color: black;"></i></a>
                     <a class="btn btn-primary " role="button" aria-disabled="true" href="{% url 'login' %}">Login</a>
-                    <a class="btn btn-primary " role="button" aria-disabled="true" href="">Sobre Nós</a>
+                    <a class="btn " role="button" aria-disabled="true" href="/#sobrenos">Sobre Nós</a>
                     {% endif %}
                 </div>
             </div>
