--- a/cad_roupas/templates/site/pesquisar_categorias.html
+++ b/cad_roupas/templates/site/pesquisar_categorias.html
@@ -6,7 +6,7 @@
     <div class="container-fluid d-inline-flex justify-content-between align-items-center py-5">
         <div>
             <div>
-                <h1 class="title-h1">PESQUISANDO POR CATEGORIA: {{categoria.nome}}</h1>
+                <h1 class="title-h1 text-uppercase">PESQUISANDO POR CATEGORIA: {{categoria.nome}}</h1>
                 <p class="section-p">para quem sabe que merece o melhor</p>
             </div>
         </div>
@@ -14,14 +14,16 @@
     <div class="container-fluid py-2 scroll">
         <div class="d-flex flex-row flex-wrap gap-5">
             {% for roupa in roupas %}
-            <div class="card card-block" style="width: 16rem;">
-                <img src="/media/{{roupa.imagem}}" class="card-img-top" style="text-transform:uppercase;" alt="...">
+            <div class="card card-block" style="width: 20rem;" id="{{categoria.id}}">
+                <img src="/media/{{roupa.imagem}}" class="card-img-top" style="max-width: 100%; max-height: 55%; object-fit: cover" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">{{ roupa.nome }}</h5>
                     <p class="card-text">{{ roupa.descricao }}</p>
-                    <a href="/produto/{{ roupa.id }}"  class="btn btn-primary">Ver sobre</a>
                 </div>
-            </div>                
+                <div class="card-footer">
+                     <a href="/produto/{{roupa.id}}" class="btn btn btn btn-danger w-100">Ver mais</a>
+                </div>
+            </div>
             {% endfor %}
         </div>
     </div>
